@startuml
!theme plain
hide circle
skinparam linetype ortho
skinparam classAttributeIconSize 0

class Event {
    Long id
    UUID organizerId
    String name
    String description
    String category
    LocalDateTime startTime
    LocalDateTime endTime
    String eventCode
    String logoUrl
    String bannerUrl
    String coverImage
    String customUrl
    Privacy privacy
    EventStatus status
    Boolean allowTicketTransfer
    Boolean allowAttendeeNameChange
    Boolean refundEnabled
    Integer refundDeadlineHours
    Double refundFeePercent
}

class Venue {
    Long id
    String name
    String address
    String city
    Integer capacity
}

class EventOrganizerInfo {
    Long id
    String organizerCode
    String organizerName
    String logoUrl
    String description
    Boolean termsAgreed
}

class EventPayoutInfo {
    Long id
    String accountHolderName
    String bankNumber
    String bankName
}

class EventInvoiceInfo {
    Long id
    Boolean enabled
    String companyName
    String taxCode
    String address
}

class EventShowtime {
    Long id
    String code
    LocalDateTime startTime
    LocalDateTime endTime
}

class ShowtimeTicketAllocation {
    Long id
    Integer quantity
}

class TicketType {
    Long id
    String name
    String code
    BigDecimal price
    Integer quota
    Integer purchaseLimit
    LocalDateTime startSale
    LocalDateTime endSale
    String description
}

class TicketZone {
    Long id
    String code
    String name
    LocalDateTime checkInTime
}

Event "1" *-- "0..*" TicketType
Event "1" *-- "0..*" EventShowtime
Event "1" *-- "0..*" TicketZone
Event "1" -- "1" Venue
Event "1" -- "1" EventOrganizerInfo
Event "1" -- "1" EventPayoutInfo
Event "1" -- "1" EventInvoiceInfo
EventShowtime "1" *-- "0..*" ShowtimeTicketAllocation
TicketType "1" *-- "0..*" ShowtimeTicketAllocation
TicketType "1" *-- "1" TicketZone

enum EventStatus {
    DRAFT
    PENDING_APPROVAL
    PUBLISHED
    CANCELLED
}

enum Privacy {
    PUBLIC
    PRIVATE
}
@enduml